# AdminChatbot

./: CMakeLists.txt  README.md
data/: adminusers.txt  answers.json
include/: adminutility.h  answernode.h  answers.h  chatbot.h  chatgui.h  chatlogic.h  graphnode.h
src/: adminutility.cpp  answernode.cpp  answers.cpp  chatbot.cpp  chatgui.cpp  chatlogic.cpp  graphnode.cpp
utils/: adminconfig.cpp  adminusers  adminusers.cpp
